Fixed spacing between the buttons. Fixed mixup of right and left. Whoops.
Extension is fully functional!

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,3 @@
 .space-out {
-  margin-left: 1em;
+  margin-right: 8px;
 }
